<resources>
    <string name="app_name">Friendly Pos</string>
    <string name="title_activity_login">Login</string>
    <string name="back_button_label">Back</string>
    <string name="title_activity_productos">Productos</string>
    <string name="title_activity_clientes">Clientes</string>

    <string name="base_url">http://friendlyaccount.com</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Error Messages -->
    <string name="Invalid_Password">Invalid Password</string>
    <string name="Invalid_Email_Address">Nombre de Usuario incorrecto</string>
    <string name="error_login">Error Login</string>
    <string name="no_internet_connection">No Internet Connection available</string>
    <string name="unknown_error">Listener is null</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="products">Productos</string>
    <string name="clients"><font face="@font/monse.otf">Clientes</font></string>
    <string name="recibos">Recibos</string>
    <string name="email">Reenviar Email</string>
    <string name="directsale">Venta Directa</string>
    <string name="distributor">Distribución</string>
    <string name="presale">Preventa</string>
    <string name="proform">Proforma</string>
    <string name="receipts">Recibos</string>
    <string name="reprintb">Reimpresion Ventas</string>
    <string name="reprintr">Reimpresion Recibos</string>
    <string name="reprintRecibos">Reimpresion Ventas</string>
    <string name="reports">Reportes</string>
    <string name="crear">Crear Cliente</string>
    <string name="graficos">Gráfico por Mes</string>
    <string-array name="listentries">
        <item>Impresora Zebra</item>
        <item>Otra Impresora</item>

    </string-array>
    <string-array name="listvalues">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="action_sincronizar">Sincronizar</string>
    <string name="action_cerrarsesion">Cerrar sesion</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="error">Ha ocurrido un error, intente nuevamente</string>
    <string name="failed">No hay conexión a Internet</string>
    <string name="success">Se han cargado los datos correctamente.</string>

    <!-- LOGIN -->
    <string name="your_email_hint">Correo Electrónico</string>
    <string name="email_hint">Usuario</string>
    <string name="your_password_hint">Contraseña</string>
    <string name="password_hint">Contraseña</string>
    <string name="Submit_button_text">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="error_invalid_user_id">Usuario inválido</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_server">Error en el servidor</string>
    <string name="error_incorrect_user_id">Usuario no registrado</string>
    <string name="error_network">Conexión de red no disponible</string>
    <string name="error_invalid_password">Contraseña inválida</string>
    <string name="credits">Sistemas Amigables Latinoamérica S.A.</string>
    <string name="URL_Webservice">URL del web Service:</string>
    <string name="URl_HInt_WEBSERVICE">Escriba aca el URL</string>

    <!-- DISTRIBUCION -->

    <string name="title_activity_distribucion">Distribución</string>
    <string name="seleccionecliente">Seleccionar cliente</string>
    <string name="resumen">Resumen</string>
    <string name="seleccioneproductos">Seleccionar productos</string>
    <string name="totalizar">Totalizar</string>

    <!-- DISTRIBUCION TOTALIZAR -->
    <string name="save">Aplicar</string>
    <string name="print">Imprimir</string>
    <string name="notes">Notas?</string>
    <string name="paywith">Cancela con</string>
    <string name="total">Total</string>

    <string name="title_activity_configuracion">Configuración</string>
    <string name="title_activity_reimprimir">Reimprimir Ventas</string>
    <string name="title_activity_reimprimir_recibos">Reimprimir Recibos</string>
    <string name="title_activity_iniciar">Iniciar</string>

    <!-- PREVENTA -->

    <string name="title_activity_preventa">Preventa</string>
    <string name="seleccionecliente_preventa">Seleccionar cliente</string>
    <string name="resumen_preventa">Resumen</string>
    <string name="seleccioneproductos_preventa">Seleccionar productos</string>
    <string name="totalizar_preventa">Totalizar</string>

    <!-- VENTA DIRECTA -->

    <string name="title_activity_ventadirecta">Venta Directa</string>


    <string name="title_activity_reimprimirpedido">Reimprimir Pedido</string>

    <string-array name="array_spinnerCreditTime1">

        <item>Seleccione los días de crédito</item>

        <item>8 Dias</item>
        <item>15 Dias</item>
        <item>30 Dias</item>
        <item>45 Dias</item>


    </string-array>

    <string-array name="array_spinnerFe1">

        <item>Seleccione Fe</item>
        <item>Tiquete Electrónico</item>
        <item>Factura Electrónica</item>

    </string-array>


    <string-array name="array_spinnerIdType1">

        <item>Seleccione el tipo de cédula</item>

        <item>01: Cédula Fisica</item>
        <item>02: Cédula Juridica</item>
        <item>03: Dimex</item>
        <item>04: NITE</item>


    </string-array>
    <string name="array_spinnerCT">Días de crédito</string>
    <string name="array_spinnerIT">Tipo de cédula</string>
    <string name="array_spinnerFE">FE</string>
</resources>
