<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingEnd="20dp"
    android:paddingLeft="20dp"
    android:id="@+id/RLLogin"
    android:paddingTop="50dp"
    android:paddingBottom="30dp"
    >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:theme="@style/WhiteProgress"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"

        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"

        >

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/logo"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_logo"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputLayout"
                    android:theme="@style/LoginTextField"
                    >

                    <EditText
                        android:id="@+id/usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_email_hint"
                        android:text="franaraya06@gmail.com"
                        android:inputType="text"
                        android:maxLines="1"

                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/float_label_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextInputLayout"
                    android:theme="@style/LoginTextField"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/contraseña"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/your_password_hint"
                        android:text="Fw2045zz85"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"

                        android:maxLines="1"
                        />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="@style/MainButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Submit_button_text"
                    />

            </LinearLayout>

    </RelativeLayout>
    </ScrollView>

    <org.sufficientlysecure.htmltextview.HtmlTextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>
