<?xml version="1.0" encoding="utf-8"?><!-- TODO: Refactor main view -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingEnd="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="50dp"
    android:paddingBottom="30dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="200dp"

        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usuario_wrapper"
            style="@style/TextInputLayout"
            android:theme="@style/ThemeLabelDark"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout.Dark">

            <EditText
                android:id="@+id/usuario"
                style="@style/Register_EditText"
                android:singleLine="true"
                android:hint="@string/your_email_hint" />
            <View
                android:id="@+id/UnderLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/editText1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:background="#212121" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contraseña_wrapper"
            style="@style/TextInputLayout"
            android:layout_marginBottom="30dp"
            android:theme="@style/ThemeLabelDark"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout.Dark">

            <EditText
                android:id="@+id/contraseña"
                style="@style/Register_EditText"
                android:hint="@string/your_password_hint"
                android:inputType="textPassword" />
            <View
                android:id="@+id/UnderLine1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/editText1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:background="#212121" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/login"
            style="@style/MainButton"

            android:text="@string/Submit_button_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:paddingTop="10dp"

        >
        <org.sufficientlysecure.htmltextview.HtmlTextView
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textAppearance="@style/TextAppearence.App.TextInputLayout"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>